2023-10-28  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-ast.h (PKL_AST_TYPE_I_DYN_P): Define.
	(struct pkl_ast_type): New field dyn_p in integral types.
	* libpoke/pkl-ast.c (pkl_ast_dup_type): Handle dyn_p in integral
	types.
	(pkl_ast_print_1): Likewise.
	* libpoke/pkl-tab.y (dynamic_integral_type_specifier: New rule.
	(integral_struct): Accept a dynamic integral type specifier as
	itype.
	* libpoke/pkl-typify.c (pkl_typify1_ps_type_struct): Handle int<*>
	and uint<*> as integral struct itypes.
	(pkl_typify1_ps_type_integral): Do not check size boundaries at
	compile-time for dynamic integral types.
	* testsuite/poke.pkl/int-struct-type-diag-16.pk: New test.
	* testsuite/poke.pkl/int-struct-type-diag-17.pk: Likewise.
	* testsuite/poke.pkl/int-struct-type-diag-18.pk: Likewise.
	* testsuite/poke.pkl/int-struct-type-diag-19.pk: Likewise.
	* testsuite/poke.pkl/int-struct-dyn-1.pk: Likewise.
	* testsuite/poke.pkl/int-struct-dyn-2.pk: Likewise.
	* testsuite/Makefile.am (EXTRA_DIST): Add new tests.
	* doc/poke.texi (Integral Structs): Document using int<*> and
	uint<*> in integral structs.

2023-10-28  Jose E. Marchesi  <jemarch@gnu.org>

	* testsuite/poke.pkl/struct-ind-5.pk: New test.
	* testsuite/Makefile.am (EXTRA_DIST): Add new test.

2023-10-28  Jose E. Marchesi  <jemarch@gnu.org>

	* pickles/iscan-str.pk: Add usage example.

2023-10-28  Jose E. Marchesi  <jemarch@gnu.org>

	* pickles/base64.pk: Use std's strchr.

2023-10-28  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/std.pk (strstr): New function.
	* testsuite/poke.std/std-test.pk: Add tests for strstr.
	* doc/poke.texi (strstr): New section.

2023-10-27  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-info.pk (pk_info_type): Do not list computed field
	setters and getters nor pretty printers as methods.

2023-10-23  Jose E. Marchesi  <jemarch@gnu.org>

	* pickles/gcov.pk: GCOV_Length now stores length in number of
	bytes and not in number of words.