@@ -1,5 +1,9 @@
 2023-10-28  Jose E. Marchesi  <jemarch@gnu.org>
 
+	* poke/pk-repl.c (pk_repl): Emit a styled prompt.
+
+2023-10-28  Jose E. Marchesi  <jemarch@gnu.org>
+
 	* libpoke/pkl-ast.h (PKL_AST_TYPE_I_DYN_P): Define.
 	(struct pkl_ast_type): New field dyn_p in integral types.
 	* libpoke/pkl-ast.c (pkl_ast_dup_type): Handle dyn_p in integral
